--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "csv-writer": "^1.5.0",
     "date-fns": "^2.8.1",
     "date-fns-tz": "^1.0.8",
+    "got": "^10.2.0",
+    "p-retry": "^4.2.0",
     "yargs": "^15.0.2"
   }
 }
