--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "typescript": "^3.7.3"
   },
   "dependencies": {
+    "@types/puppeteer": "^2.0.0",
     "csv-writer": "^1.5.0",
     "date-fns": "^2.8.1",
     "date-fns-tz": "^1.0.8",
+    "dotenv": "^8.2.0",
     "got": "^10.2.0",
     "p-retry": "^4.2.0",
+    "puppeteer": "^2.1.1",
     "yargs": "^15.0.2"
   }
 }
