--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "scripts": {
     "build": "yarn run tsc",
-    "test": "yarn jest"
+    "test": "yarn jest",
+    "start": "./src/run.ts"
   },
   "devDependencies": {
     "@types/jest": "^24.0.23",
