Implement automatically importing in YNAB

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 MONIZZE_EMAIL=me@example.org
 MONIZZE_PASSWORD=very-secure
+YNAB_PERSONAL_ACCESS_TOKEN=abc1234567890
+YNAB_BUDGET_ID=1111-2222-3333-4444
+YNAB_ACCOUNT_ID=1111-2222-3333-4444
+
