--- a/package.json
+++ b/package.json
@@ -12,22 +12,34 @@
     "start": "./src/run.ts"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.23",
-    "@types/node": "^12.12.17",
-    "jest": "^24.9.0",
-    "ts-jest": "^24.2.0",
-    "ts-node": "^8.5.4",
-    "typescript": "^3.7.3"
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.20",
+    "@types/puppeteer": "^2.0.0",
+    "husky": "^4.3.7",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.3",
+    "prettier": "^2.2.1",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@types/puppeteer": "^2.0.0",
-    "csv-writer": "^1.5.0",
-    "date-fns": "^2.8.1",
-    "date-fns-tz": "^1.0.8",
+    "csv-writer": "^1.6.0",
+    "date-fns": "^2.16.1",
+    "date-fns-tz": "^1.0.12",
     "dotenv": "^8.2.0",
-    "got": "^10.2.0",
+    "got": "^11.8.1",
     "p-retry": "^4.2.0",
     "puppeteer": "^2.1.1",
-    "yargs": "^15.0.2"
+    "yargs": "^15.0.2",
+    "ynab": "^1.21.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.ts": "prettier --write"
   }
 }
