--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,4 @@ MONIZZE_PASSWORD=very-secure
 YNAB_PERSONAL_ACCESS_TOKEN=abc1234567890
 YNAB_BUDGET_ID=1111-2222-3333-4444
 YNAB_ACCOUNT_ID=1111-2222-3333-4444
-
+ISSUING_COMPANY_NAME="Some Company NV"
